force-app/main/default/objects/Contract/fields/CancelReason__c.field-meta.xml
<CustomField>
    <fullName>CancelReason__c</fullName>
    <label>Cancel Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>