force-app/main/default/objects/Contract/fields/DiscountPercentOfAmount__c.field-meta.xml
<CustomField>
    <fullName>DiscountPercentOfAmount__c</fullName>
    <formula>Opportunity__r.DiscountPercentOfAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DiscountPercentOfAmount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>