force-app/main/default/objects/Contract/fields/FormatContractName__c.field-meta.xml
<CustomField>
    <fullName>FormatContractName__c</fullName>
    <formula>LEFT( Opportunity__r.Name , 80)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Format ContractName</label>
    <type>Text</type>
</CustomField>