force-app/main/default/objects/Contract/fields/IsSignedContract__c.field-meta.xml
<CustomField>
    <fullName>IsSignedContract__c</fullName>
    <formula>if( Text(Status) = &quot;Signed Contract&quot;,True,False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsSignedContract</label>
    <type>Checkbox</type>
</CustomField>