force-app/main/default/objects/Contract/fields/SupplementaryAgreementDocId__c.field-meta.xml
<CustomField>
    <fullName>SupplementaryAgreementDocId__c</fullName>
    <description>ไว้ใช้เก็บ Content Document Id ของเอกสาร Reservation เพื่อใช้ในการ Save เอกสารทับไฟล์เดิมเวลากด Generate SPA</description>
    <label>Supplementary Agreement Doc Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>