force-app/main/default/objects/Contract/fields/TotalDiscountAmount__c.field-meta.xml
<CustomField>
    <fullName>TotalDiscountAmount__c</fullName>
    <formula>Opportunity__r.TotalDiscountAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Discount Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>