force-app/main/default/objects/Contract/fields/TotalDiscountPercent__c.field-meta.xml
<CustomField>
    <fullName>TotalDiscountPercent__c</fullName>
    <formula>Opportunity__r.TotalDiscountPercent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Discount Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>