force-app/main/default/objects/Contract/fields/TotalPriceSqm__c.field-meta.xml
<CustomField>
    <fullName>TotalPriceSqm__c</fullName>
    <formula>BLANKVALUE(Opportunity__r.NetPricePerSqm__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Price/Sq.m</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>