force-app/main/default/objects/Contract/fields/UnitPricesqm__c.field-meta.xml
<CustomField>
    <fullName>UnitPricesqm__c</fullName>
    <formula>Opportunity__r.UnitPricePerSqm__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit Price/sq.m.</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>