force-app/main/default/objects/Contract/validationRules/CheckCancelReason.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckCancelReason</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
AND(
ISPICKVAL(  Status  , &quot;Cancel&quot; )
),
   ISBLANK(CancelReason__c)

)</errorConditionFormula>
    <errorDisplayField>CancelReason__c</errorDisplayField>
    <errorMessage>Before changing the stage to &quot;Cancel&quot;, please enter Cancel Reason first.</errorMessage>
</ValidationRule>