force-app/main/default/objects/Contract/validationRules/CheckSignedContract.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckSignedContract</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
AND(
ISPICKVAL(  Status  , &quot;Signed Contract&quot; )
),
  ISNULL( ContractSignedDate__c )   

)</errorConditionFormula>
    <errorDisplayField>ContractSignedDate__c</errorDisplayField>
    <errorMessage>Before changing the stage to &quot;Signed Contract&quot;, please enter Contract Signed Date first.</errorMessage>
</ValidationRule>