force-app/main/default/objects/Contract/validationRules/DoNotEditWhenCancel.validationRule-meta.xml
<ValidationRule>
    <fullName>DoNotEditWhenCancel</fullName>
    <active>true</active>
    <errorConditionFormula>AND
(
ISPICKVAL(PRIORVALUE(  Status  ), &quot;Cancel&quot;)



)</errorConditionFormula>
    <errorMessage>Cannot edit all information when the contract is &quot;Cancel&quot;</errorMessage>
</ValidationRule>