force-app/main/default/objects/Contract/validationRules/DoNotEditWhenSignedContract.validationRule-meta.xml
<ValidationRule>
    <fullName>DoNotEditWhenSignedContract</fullName>
    <active>true</active>
    <errorConditionFormula>AND
(
ISPICKVAL(PRIORVALUE(  Status  ), &quot;Signed Contract&quot;),
NOT ISPICKVAL(  Status  , &quot;Cancel&quot;)


)</errorConditionFormula>
    <errorMessage>Cannot edit all information when the contract is &quot;Signed Contract&quot;</errorMessage>
</ValidationRule>